app/assets/stylesheets/application.css.scss
/* ... */
.SectionEditor {
  flex: 1;
  display: flex;
  position: relative;

  .content {
    padding-top: 0;
    flex: 1;
    display: flex;
    > div {
      flex: 1;
    }

    form > .mtime {
      position: absolute;
      top: 6px; right: 36px;
      color: lighten(black, 75%);
      font-size: 75%;
      .Icon {
        font-size: 75%;
      }
    }
  }

  .titleInput {
    font-size: 24px;
    border-radius: 3px 3px 0 0;
    padding: 19px 12px 14px;
    border-bottom: none;
    outline: none;
  }
  .contentInput {
    border-radius: 0 0 3px 3px;
  }

  .ButtonGroup {
    margin-top: 24px;
    display: flex;
    .spacer {
      flex: 1;
    }
    .Button:last-child {
      margin-right: 0;
    }
  }

  .noSectionsMessage {
    display: flex;
    flex: 1;
    div {
      margin: auto;
      text-align: center;
      .book {
        display: flex;
        width: 180px; height: 180px;
        border: 8px dotted lighten(black, 90%);
        border-radius: 100%;
        margin-bottom: 24px;
      }
      .Icon {
        display: block;
        position: relative;
        top: 14px;
        font-size: 86px;
        line-height: 86px;
        color: lighten(black, 80%);
        margin: auto;
      }
      p {
        font-size: 24px;
        line-height: 28px;
        color: lighten(black, 65%);
      }
    }
  }
}

.MarkdownContentInput {
  display: flex!important;
  flex-direction: row;
  padding: 0!important;
  textarea {
    padding: 12px;
    width: 100%;
    min-height: 320px;
    font-family: Monaco;
    font-size: 80%;
    border: none;
    outline: none;
  }
  .preview {
    display: none;
    flex: 1;
    border-left: 1px solid lighten(black, 85%);
    padding: 12px;
    background: lighten(black, 98%);
    height: 320px;
    overflow-y: scroll;
    label {
      display: block;
      color: lighten(black, 75%);
      margin-bottom: 12px;
    }
  }
  .previewHtml {
    h1, h2, h3, h4, h5, p, img, li, ul {
      margin-bottom: 12px;
    }
    :last-child {
      margin-bottom: 0;
    }
    h1, h2, h3, h4, h5 {
      font-weight: bold;
    }
    h1 {
      font-size: 24px;
    }
    a {
      color: blue;
      text-decoration: underline;
    }
    img {
      min-width: 100%;
    }
    li {
      position: relative;
      padding-left: 12px;
    }
    li:before {
      position: absolute;
      left: 0;
      content: '•';
    }
  }
}
/* ... */

